--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -39,3 +39,22 @@ input {
 .quantity {
   margin: 0 5px;
 }
+.wrap{
+  margin:20px;
+}
+.center{
+  text-align: center;
+}
+.h1{
+  text-align: center;
+  padding-top:30px;
+  padding-bottom:30px;
+}
+.container{
+  max-width: 1080px;
+  width: 100%;
+  margin: 0 auto;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+}
